[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Enemies/Wizard_Shooter.gd" type="Script" id=1]
[ext_resource path="res://Images/Enemies/enemies/Wizard_Shooter/0.png" type="Texture" id=2]
[ext_resource path="res://Images/Enemies/enemies/Wizard_Shooter/1.png" type="Texture" id=3]
[ext_resource path="res://Images/Enemies/enemies/Wizard_Shooter/2.png" type="Texture" id=4]
[ext_resource path="res://Images/Enemies/enemies/Wizard_Shooter/8.png" type="Texture" id=5]
[ext_resource path="res://Images/Enemies/enemies/Wizard_Shooter/9.png" type="Texture" id=6]
[ext_resource path="res://Images/Enemies/enemies/Wizard_Shooter/10.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Enemies/Sprite_wizard.gd" type="Script" id=8]
[ext_resource path="res://Images/Enemies/Bosses/HP/under.png" type="Texture" id=9]
[ext_resource path="res://Images/Enemies/Bosses/HP/fill.png" type="Texture" id=10]
[ext_resource path="res://Sounds/Effects/Enemies/Death/sfx_deathscream_human14.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0
height = 35.0

[sub_resource type="Animation" id=3]

resource_name = "death"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "hit"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Wizard_Shooter" type="KinematicBody2D" index="0"]

scale = Vector2( 1.75, 1.75 )
input_pickable = false
collision_layer = 2
collision_mask = 5
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]
MAXHP = 500
WAIT_TIME = 1.5

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "attack"
frame = 1
playing = true
offset = Vector2( 0, 2 )
script = ExtResource( 8 )
_sections_unfolded = [ "Visibility" ]

[node name="Collision" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 6 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Left" type="RayCast2D" parent="." index="2"]

enabled = true
exclude_parent = true
cast_to = Vector2( -736, 0 )
collision_mask = 1

[node name="LeftUp" type="RayCast2D" parent="." index="3"]

enabled = true
exclude_parent = true
cast_to = Vector2( -736, -480 )
collision_mask = 1

[node name="Right" type="RayCast2D" parent="." index="4"]

enabled = true
exclude_parent = true
cast_to = Vector2( 736, 0 )
collision_mask = 1

[node name="RightUp" type="RayCast2D" parent="." index="5"]

enabled = true
exclude_parent = true
cast_to = Vector2( 736, -480 )
collision_mask = 1

[node name="Up" type="RayCast2D" parent="." index="6"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, -480 )
collision_mask = 1

[node name="HP" type="TextureProgress" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -25.0
margin_top = -40.0
margin_right = 889.0
rect_scale = Vector2( 0.07, 0.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 20.0
exp_edit = false
rounded = false
texture_under = ExtResource( 9 )
texture_over = null
texture_progress = ExtResource( 10 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Timer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="anim" type="AnimationPlayer" parent="." index="9"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/death = SubResource( 3 )
anims/hit = SubResource( 4 )
blend_times = [  ]

[node name="Gun" type="Position2D" parent="." index="10"]

[node name="Visibility" type="VisibilityNotifier2D" parent="." index="11"]

rect = Rect2( -10, -10, 20, 20 )

[node name="Sounds" type="Node" parent="." index="12"]

[node name="death" type="AudioStreamPlayer" parent="Sounds" index="0"]

stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


